syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "proto/lib/enum.proto";
import "proto/lib/message.proto";

option go_package = "internal/api";

/**
 * Test basic scenarios that kaja needs to support
 */
service Basics {
    // All possible protobuf types
    rpc Types(TypesRequest) returns(TypesRequest);
    rpc Map(MapRequest) returns(MapRequest);
    rpc Panic(lib.Void) returns(lib.Message);
    rpc Repeated(RepeatedRequest) returns(RepeatedRequest);
}

message MapRequest {
    message RepeatedString {
        repeated string value = 1;
    }

    map<string, string> string_string = 1;
    map<string, int32> string_int32 = 2;
    map<sint64, string> sint64_string = 3;
    map<string, RepeatedString> string_repeated_string = 4;
}

enum Enum {
    KEY_0 = 0;
    KEY_1 = 1;
}

message RepeatedRequest {
    repeated string string = 1;
    repeated int32 int32 = 2;
    repeated Enum enum = 3;
    repeated lib.Message message = 4;
}

message TypesRequest {
    enum NestedEnum {
        KEY_0 = 0;
        KEY_1 = 1;
    }

    google.protobuf.Timestamp timestamp = 1;
    bool bool = 2;
    Enum enum = 3;
    NestedEnum nested_enum = 4;
    lib.Position position = 5;
}
